--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <header class="header">
     <div class="container header-container">
         <a href="../index.html" class="logo-container">
-            <img src="../images/logo.png" alt="Kishan Yadav logo">
+            <img src="./images/logo.png" alt="Kishan Yadav logo">
         </a>
         <nav class="nav-links">
             <a href="./screen/about.html">About Me</a>
