--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="case-card">
                      <a href="./screen/view-casestudy.html" class="case-card-image-link">
                         <div class="case-card-image">
-                             <img src="https://images.unsplash.com/photo-1629904853716-f0bc54eea481?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80" alt="E-commerce website project">
+                             <img src="./images/MOCKUP/Scene 1 (1).png">
                         </div>
                      </a>
                      
