--- a/screen/casestudy.html
+++ b/screen/casestudy.html
@@ -53,7 +53,7 @@
                 <div class="case-card">
                      <a href="#" class="case-card-image-link">
                         <div class="case-card-image">
-                             <img src="https://images.unsplash.com/photo-1629904853716-f0bc54eea481?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80" alt="E-commerce platform developed using PHP and MySQL.">
+                             <img src="../images/MOCKUP/Scene 1 (1).png" alt="E-commerce platform developed using PHP and MySQL.">
                         </div>
                      </a>
                      <p>Full-Stack Development</p>
